@@ -12,6 +12,10 @@ import ru.beeline.fdmproducts.dto.RelationDTO;
 import ru.beeline.fdmproducts.exception.EntityNotFoundException;
 import ru.beeline.fdmproducts.repository.*;
 
+import javax.persistence.EntityManager;
+import javax.persistence.PersistenceContext;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.function.Function;
@@ -31,57 +35,56 @@ public class InfraService {
     private RelationRepository relationRepository;
     @Autowired
     private InfraProductRepository infraProductRepository;
+    @PersistenceContext
+    private EntityManager entityManager;
+    private static final int BATCH_SIZE = 1000;
 
-    public void syncInfrastructure(String productAlias, InfraRequestDTO request) {
-        log.info("start of the Product Infrastructure Synchronization method:" + request.toString());
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 0");
+    public void syncInfrastructure(String alias, InfraRequestDTO request) {
+        log.info("start of the Product Infrastructure Synchronization method");
+        String productAlias = URLDecoder.decode(alias, StandardCharsets.UTF_8);
         Product product = productRepository.findByAliasCaseInsensitive(productAlias);
-        log.info("product is" + product);
 
         if (product == null) {
             throw new EntityNotFoundException("Продукт не найден");
         }
-
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 1");
         List<String> processedCmdbIds = request.getInfra().stream().map(InfraDTO::getCmdbId).toList();
         if (!processedCmdbIds.isEmpty()) {
+            infraProductRepository.restoreInfraProducts(product.getId(), processedCmdbIds);
             infraProductRepository.markInfraProductsDeleted(product.getId(), processedCmdbIds, LocalDateTime.now());
         }
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 2");
         Map<String, Infra> existingInfraMap = infraRepository.findInfrasByProductId(product.getId())
                 .stream()
                 .collect(Collectors.toMap(Infra::getCmdbId, Function.identity()));
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3");
         processInfras(request.getInfra(), product, existingInfraMap);
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 4");
+        request.getInfra().clear();
+        request.setInfra(null);
         processRelations(request.getRelations(), existingInfraMap);
+        existingInfraMap.clear();
+        existingInfraMap = null;
+        request.getRelations().clear();
+        request.setRelations(null);
+        System.gc();
         log.info("The syncInfrastructure method is completed");
     }
 
     private void processInfras(List<InfraDTO> requestInfras, Product product, Map<String, Infra> existingInfraMap) {
-        log.info("requestInfras size: " + requestInfras.size());
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3a");
         loadMissingInfras(requestInfras, existingInfraMap);
         List<Infra> newInfras = new ArrayList<>();
         List<Infra> updatedInfras = new ArrayList<>();
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3b");
         processCreateOrUpdateInfras(requestInfras, existingInfraMap, product, newInfras, updatedInfras);
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3c");
         saveNewInfrasAndProducts(newInfras, product, existingInfraMap);
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3d");
+        newInfras = null;
         saveUpdatedInfras(updatedInfras);
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3e");
+        updatedInfras = null;
         processAllProperties(requestInfras, existingInfraMap);
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3f");
+        requestInfras = null;
     }
 
     private void loadMissingInfras(List<InfraDTO> requestInfras, Map<String, Infra> existingInfraMap) {
         Set<String> requestCmdbIds = requestInfras.stream().map(InfraDTO::getCmdbId).collect(Collectors.toSet());
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3a.a");
         Set<String> missingCmdbIds = requestCmdbIds.stream()
                 .filter(cmdbId -> !existingInfraMap.containsKey(cmdbId))
                 .collect(Collectors.toSet());
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3a.b size=" + missingCmdbIds.size());
         if (!missingCmdbIds.isEmpty()) {
             List<Infra> missingInfras = infraRepository.findByCmdbIdIn(missingCmdbIds);
             for (Infra infra : missingInfras) {
@@ -90,11 +93,8 @@ public class InfraService {
         }
     }
 
-    private void processCreateOrUpdateInfras(List<InfraDTO> requestInfras,
-                                             Map<String, Infra> existingInfraMap,
-                                             Product product,
-                                             List<Infra> newInfras,
-                                             List<Infra> updatedInfras) {
+    private void processCreateOrUpdateInfras(List<InfraDTO> requestInfras, Map<String, Infra> existingInfraMap,
+                                             Product product, List<Infra> newInfras, List<Infra> updatedInfras) {
         for (InfraDTO infraDTO : requestInfras) {
             Infra infra = existingInfraMap.get(infraDTO.getCmdbId());
             if (infra == null) {
@@ -143,32 +143,37 @@ public class InfraService {
     }
 
     private void saveNewInfrasAndProducts(List<Infra> newInfras, Product product, Map<String, Infra> existingInfraMap) {
-        if (newInfras.isEmpty())
+        if (newInfras.isEmpty()) {
             return;
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3c.1");
-        List<Infra> savedInfras = infraRepository.saveAllAndFlush(newInfras);
-        List<InfraProduct> newInfraProducts = new ArrayList<>();
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3c.2 size=" + savedInfras.size());
-        for (Infra infra : savedInfras) {
-            boolean hasLink = infra.getInfraProducts()
-                    .stream()
-                    .anyMatch(ip -> ip.getProduct().getId().equals(product.getId()));
-            if (!hasLink) {
-                InfraProduct infraProduct = InfraProduct.builder()
-                        .createdDate(LocalDateTime.now())
-                        .infra(infra)
-                        .product(product)
-                        .build();
-                infra.getInfraProducts().add(infraProduct);
-                newInfraProducts.add(infraProduct);
+        }
+        for (int i = 0; i < newInfras.size(); i += BATCH_SIZE) {
+            int end = Math.min(i + BATCH_SIZE, newInfras.size());
+            List<Infra> batch = newInfras.subList(i, end);
+            List<Infra> savedBatch = infraRepository.saveAllAndFlush(batch);
+            List<InfraProduct> infraProductsBatch = new ArrayList<>();
+            for (Infra infra : savedBatch) {
+                boolean hasLink = infra.getInfraProducts()
+                        .stream()
+                        .anyMatch(ip -> ip.getProduct().getId().equals(product.getId()));
+                if (!hasLink) {
+                    InfraProduct infraProduct = InfraProduct.builder()
+                            .createdDate(LocalDateTime.now())
+                            .infra(infra)
+                            .product(product)
+                            .build();
+                    infra.getInfraProducts().add(infraProduct);
+                    infraProductsBatch.add(infraProduct);
+                }
+                existingInfraMap.put(infra.getCmdbId(), infra);
             }
-            existingInfraMap.put(infra.getCmdbId(), infra);
+            if (!infraProductsBatch.isEmpty()) {
+                infraProductRepository.saveAll(infraProductsBatch);
+                infraProductRepository.flush();
+            }
+            entityManager.clear();
         }
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 3c.3");
-        if (!newInfraProducts.isEmpty()) {
-            infraProductRepository.saveAll(newInfraProducts);
-            infraProductRepository.flush();
-        }
+        newInfras.clear();
+        newInfras= null;
     }
 
     private void saveUpdatedInfras(List<Infra> updatedInfras) {
@@ -178,48 +183,55 @@ public class InfraService {
     }
 
     private void processAllProperties(List<InfraDTO> requestInfras, Map<String, Infra> existingInfraMap) {
-        log.info("Received {} InfraDTOs to process", requestInfras.size());
         List<Integer> infraIds = requestInfras.stream()
                 .map(dto -> existingInfraMap.get(dto.getCmdbId()))
                 .filter(Objects::nonNull)
                 .map(Infra::getId)
                 .toList();
-        List<Property> allProperties = propertyRepository.findByInfraIdIn(infraIds);
-        log.info("Fetched total {} properties for all Infra", allProperties.size());
-        Map<Integer, List<Property>> propertiesByInfraId = allProperties.stream()
-                .collect(Collectors.groupingBy(p -> p.getInfra().getId()));
-        List<Property> toCreate = new ArrayList<>();
-        List<Property> toUpdate = new ArrayList<>();
-        List<Property> toDelete = new ArrayList<>();
-        for (InfraDTO infraDTO : requestInfras) {
-            Infra infra = existingInfraMap.get(infraDTO.getCmdbId());
-            if (infra != null) {
-                List<Property> existingProperties = propertiesByInfraId.getOrDefault(infra.getId(), List.of());
-                processProperties(infra, infraDTO.getProperties(), existingProperties, toCreate, toUpdate, toDelete);
+        for (int i = 0; i < infraIds.size(); i += BATCH_SIZE) {
+            List<Integer> batchInfraIds = infraIds.subList(i, Math.min(i + BATCH_SIZE, infraIds.size()));
+            List<Property> allProperties = propertyRepository.findByInfraIdIn(batchInfraIds);
+
+            Map<Integer, List<Property>> propertiesByInfraId = allProperties.stream()
+                    .collect(Collectors.groupingBy(p -> p.getInfra().getId()));
+            List<Property> toCreate = new ArrayList<>();
+            List<Property> toUpdate = new ArrayList<>();
+            List<Property> toDelete = new ArrayList<>();
+            for (InfraDTO infraDTO : requestInfras) {
+                Infra infra = existingInfraMap.get(infraDTO.getCmdbId());
+                if (infra != null && batchInfraIds.contains(infra.getId())) {
+                    List<Property> existingProperties = propertiesByInfraId.getOrDefault(infra.getId(), List.of());
+                    processProperties(infra, infraDTO.getProperties(), existingProperties, toCreate, toUpdate, toDelete);
+                }
             }
+            saveInBatches(toDelete, "deleted properties");
+            saveInBatches(toCreate, "new properties");
+            saveInBatches(toUpdate, "existing properties");
+            entityManager.clear();
         }
-        propertyRepository.saveAll(toDelete);
-        log.info("Updated {} deleted properties", toUpdate.size());
-        propertyRepository.saveAll(toCreate);
-        log.info("Saved {} new properties", toCreate.size());
-        propertyRepository.saveAll(toUpdate);
-        log.info("Updated {} existing properties", toUpdate.size());
-        log.info("Finished processing all InfraDTO properties");
     }
 
-    private void processProperties(Infra infra,
-                                   List<PropertyDTO> properties,
-                                   List<Property> existingProperties,
-                                   List<Property> toCreate,
-                                   List<Property> toUpdate,
-                                   List<Property> toDelete) {
+    private void saveInBatches(List<Property> props, String label) {
+        for (int i = 0; i < props.size(); i += BATCH_SIZE) {
+            int end = Math.min(i + BATCH_SIZE, props.size());
+            List<Property> batch = props.subList(i, end);
+            propertyRepository.saveAll(batch);
+            propertyRepository.flush();
+        }
+        props.clear();
+        props = null;
+    }
+
+
+    private void processProperties(Infra infra, List<PropertyDTO> properties, List<Property> existingProperties,
+                                   List<Property> toCreate, List<Property> toUpdate, List<Property> toDelete) {
         Map<String, Property> existingPropertyMap = existingProperties.stream()
                 .collect(Collectors.toMap(Property::getName, Function.identity()));
         Set<String> incomingKeys = properties.stream().map(PropertyDTO::getKey).collect(Collectors.toSet());
         toDelete.addAll(existingProperties.stream()
-                                .filter(property -> !incomingKeys.contains(property.getName()) && property.getDeletedDate() == null)
-                                .peek(p -> p.setDeletedDate(LocalDateTime.now()))
-                                .collect(Collectors.toList()));
+                .filter(property -> !incomingKeys.contains(property.getName()) && property.getDeletedDate() == null)
+                .peek(p -> p.setDeletedDate(LocalDateTime.now()))
+                .collect(Collectors.toList()));
 
         for (PropertyDTO dto : properties) {
             Property existing = existingPropertyMap.get(dto.getKey());
@@ -244,40 +256,45 @@ public class InfraService {
     }
 
     private void processRelations(List<RelationDTO> relations, Map<String, Infra> existingInfraMap) {
-        log.info("start process for Relations with size" + relations.size());
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 4.a");
+
         List<Relation> relationsForSave = new ArrayList<>();
-        Map<String, List<Relation>> children = relationRepository.findByParentIdIn(relations.stream()
-                                                                                           .map(RelationDTO::getCmdbId)
-                                                                                           .collect(Collectors.toList()))
+        Map<String, List<Relation>> children = relationRepository.findByParentIdIn(
+                        relations.stream()
+                                .map(RelationDTO::getCmdbId)
+                                .collect(Collectors.toList()))
                 .stream()
                 .collect(Collectors.groupingBy(Relation::getParentId));
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 4.b");
+
         List<String> chldIds = relations.stream()
                 .flatMap(r -> r.getChildren().stream())
-                .collect(Collectors.toList());
-        List<String> cacheInfra = new ArrayList<>();
-        if(!chldIds.isEmpty()){
-        cacheInfra = infraRepository.findCmdbIdByCmdbIdIn(chldIds);
-        }
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 4.c");
+                .toList();
+        List<String> cacheInfra = chldIds.isEmpty() ? Collections.emptyList() : infraRepository.findCmdbIdByCmdbIdIn(chldIds);
         for (RelationDTO relationDTO : relations) {
             if (existingInfraMap.containsKey(relationDTO.getCmdbId())) {
                 processRelation(relationDTO.getCmdbId(), relationDTO, relationsForSave, children, cacheInfra);
             }
+            if (relationsForSave.size() >= BATCH_SIZE) {
+                relationRepository.saveAll(relationsForSave);
+                relationRepository.flush();
+
+            }
         }
+        if (!relationsForSave.isEmpty()) {
+            relationRepository.saveAll(relationsForSave);
+            relationRepository.flush();
+        }
+        relationsForSave = null;
+
         children.clear();
         cacheInfra.clear();
-        log.info("!!!!!!!!!!!!!!!!!!!!!! 4.d");
-        relationRepository.saveAll(relationsForSave);
-        log.info("The processRelations method is completed");
+        children = null;
+        cacheInfra = null;
+
     }
 
-    private void processRelation(String cmdbId,
-                                 RelationDTO relationDTO,
-                                 List<Relation> relationsForSave,
-                                 Map<String, List<Relation>> childrenRelation,
-                                 List<String> cacheInfra) {
+
+    private void processRelation(String cmdbId, RelationDTO relationDTO, List<Relation> relationsForSave,
+                                 Map<String, List<Relation>> childrenRelation, List<String> cacheInfra) {
 
         List<Relation> existingRelations = childrenRelation.get(cmdbId);
         if (existingRelations == null) {
